# Projeto-AA

./: README.md
telemetria-buffer-circular/: .gitignore  docker-compose.yml
telemetria-buffer-circular/analise/: plots.py
telemetria-buffer-circular/broker/: mosquitto.conf
telemetria-buffer-circular/cliente/: CMakeLists.txt  build.ps1  build.sh
telemetria-buffer-circular/cliente/include/: DynamicBuffer.hpp  MqttPublisher.hpp  Profiler.hpp  RingBuffer.hpp  Sample.hpp  Sensor.hpp
telemetria-buffer-circular/cliente/src/: DynamicBuffer.cpp  MqttPublisher.cpp  Profiler.cpp  Sensor.cpp  main.cpp
telemetria-buffer-circular/cliente/tests/: test_buffers.cpp
telemetria-buffer-circular/dashboard/: Dockerfile  flows.json
telemetria-buffer-circular/experimentos/: run_benchmarks.py
telemetria-buffer-circular/experimentos/resultados/: lat_v1_realloc.txt  lat_v1_shift.txt  lat_v2_ring.txt  summary.csv
telemetria-buffer-circular/relatorio/: referencias.bib  relatorio.tex
